--- a/hw3.html
+++ b/hw3.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Password Generator</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="hw3.css">
     <script src="hw3.js"></script>
@@ -12,14 +14,12 @@
   <body>
     <div class="container">
       <h2>Password Generator</h2>
-      <textarea
-      readonly
-      id="password"
-      placeholder="Your Secure Password"
-      aria-label="Generated Password"
-    ></textarea>
-    <button class="button">Generate</button> 
-    <button class="button">Copy to the clipboard</button>   
+      <br/>
+      <input type="text" id="display">
+      <br/>
+    <button onclick="">Generate password</button> 
+    <button onclick="">Copy to the clipboard</button>
+    <div class="length"></div>
 
     <div class="setting">
         <div class="setting">
@@ -44,6 +44,7 @@
         <br/>
       </div>
         </div>
+      </div>
       </div>
         
       </div>
